# eos

./: .mailmap  configure.ac
.github/actions/create-status-check/: action.yml  index.js
.github/actions/report-activity/: package.json
.github/workflows/: macos-build+check.yaml  manylinux-build+check+deploy.yaml  ubuntu-build+check+deploy.yaml
doc/: installation.rst  use-cases.rst
doc/api/: python.rst.jinja
eos/: Makefile.am  constraint.cc  constraint_TEST.cc  flavours.hh  observable-impl.hh  observable.cc  references.yaml  signal-pdf.cc  transitions.hh
eos/b-decays/: Makefile.am  b-to-3l-nu.cc  b-to-3l-nu.hh  b-to-d-pi-l-nu.cc  b-to-d-pi-l-nu.hh  b-to-d-pi-l-nu_TEST.cc  b-to-d-psd.cc  b-to-dstar-l-nu.cc  b-to-dstar-l-nu.hh  b-to-dstar-l-nu_TEST.cc  b-to-dstar-l-x-nu.cc  b-to-gamma-l-nu.cc  b-to-gamma-l-nu.hh  b-to-vec-l-nu-impl.hh  b-to-vec-l-nu.cc  b-to-vec-l-nu.hh  b-to-xc-l-nu.cc  b-to-xc-l-nu.hh  observables.cc  observables.hh  test.cc  test.hh
eos/constraints/: B-to-D-l-nu.yaml  B-to-D-pi-l-nu.yaml  B-to-P-form-factors.yaml  B-to-V-form-factors.yaml  Lb-to-L-Charmonium.yaml  Lb-to-L-ll.yaml  Makefile.am  P-to-P-form-factors.yaml  ee-to-pipi.yaml  hqet.yaml  pi-to-pi-form-factors.yaml  tau-to-pi-pi-nu.yaml  vacuum-to-PP-form-factors.yaml
eos/form-factors/: Makefile.am  analytic-b-to-gamma.cc  analytic-b-to-gamma.hh  analytic-b-to-pi.cc  analytic-b-to-psd-dkmmo2008-impl.hh  analytic-bs-to-k_TEST.cc  b-lcdas-flvd2022.cc  b-lcdas-flvd2022.hh  baryonic-processes.hh  baryonic.hh  form-factor-adapter.hh  k-lcdas.cc  k-lcdas.hh  k-lcdas_TEST.cc  mesonic-hqet.hh  mesonic-hqet_TEST.cc  mesonic-impl.hh  mesonic-processes.hh  mesonic.cc  mesonic.hh  mesonic_TEST.cc  observables.cc  parametric-bgl1997-impl.hh  parametric-bgl1997_TEST.cc  parametric-brvd2021.cc  parametric-brvd2021.hh  parametric-brvd2021_TEST.cc  parametric-dgkvd2020.cc  parametric-dgkvd2020.hh  parametric-egjvd2020-impl.hh  parametric-egjvd2020.cc  parametric-egjvd2020.hh  parametric-egjvd2020_TEST.cc  parametric-kkrvd2024.cc  parametric-kkrvd2024.hh  parametric-kkrvd2024_TEST.cc  parametric-kkvd2021.cc  parametric-kkvd2021.hh  pi-lcdas.hh  psd-lcdas.cc  (+5 more)
eos/k-decays/: Makefile.am  k-to-l-nu.cc  k-to-l-nu.hh  observables.cc  observables.hh
eos/maths/: Makefile.am  multiplepolylog_li22-const.cc  multiplepolylog_li22.cc  multiplepolylog_li22.hh
eos/models/: ckm.cc  ckm.hh  model.hh  standard-model.cc  standard-model.hh  wet.cc  wet.hh  wilson-coefficients.cc  wilson-coefficients.hh
eos/parameters/: Makefile.am  b-lcda.yaml  form-factors.yaml  hadron-properties.yaml  hadronic-matrix-elements.yaml  sm-and-eft.yaml
eos/rare-b-decays/: Makefile.am  b-to-kstar-ll-abbbsw2008.cc  b-to-kstar-ll-abbbsw2008.hh  b-to-kstar-ll-abbbsw2008_TEST.cc  b-to-kstar-ll-base.hh  b-to-kstar-ll-bfs2004.cc  b-to-kstar-ll-bfs2004.hh  b-to-kstar-ll-bfs2004_TEST.cc  b-to-kstar-ll-cffmpsv2015.cc  b-to-kstar-ll-cffmpsv2015.hh  b-to-kstar-ll-cffmpsv2015_TEST.cc  b-to-kstar-ll-gp2004.cc  b-to-kstar-ll-gp2004_TEST.cc  exclusive-b-to-s-dilepton-large-recoil.cc  exclusive-b-to-s-dilepton-large-recoil.hh  exclusive-b-to-s-dilepton-large-recoil_TEST.cc  exclusive-b-to-s-dilepton-low-recoil.cc  exclusive-b-to-s-dilepton-low-recoil.hh  exclusive-b-to-s-dilepton-low-recoil_TEST.cc  exclusive-b-to-s-dilepton.cc  exclusive-b-to-s-dilepton.hh  exclusive-b-to-s-gamma.cc  lambdab-to-lambda-charmonium.cc  lambdab-to-lambda-charmonium.hh  lambdab-to-lambda-charmonium_TEST.cc  nonlocal-form-factors.hh  nonlocal-formfactors-fwd.hh  nonlocal-formfactors-onehalfplus-to-onehalfplus.cc  nonlocal-formfactors-onehalfplus-to-onehalfplus_TEST.cc  nonlocal-formfactors.cc  nonlocal-formfactors.hh  observables.cc  qcdf-integrals-analytical.cc  qcdf-integrals-mixed.cc  qcdf-integrals-numerical.cc  qcdf-integrals.hh  qcdf-integrals_TEST.cc
eos/statistics/: log-likelihood.cc  log-likelihood.hh  log-posterior.cc  markov-chain.cc  test-statistic-impl.hh  test-statistic.hh
eos/tau-decays/: Makefile.am  observables.cc  observables.hh  tau-to-3-leptons.cc  tau-to-3-leptons.hh  tau-to-psd-gamma-nu.cc  tau-to-psd-gamma-nu.hh
eos/utils/: Makefile.am  ckm_scan_model.cc  ckm_scan_model.hh  concrete-cacheable-observable.hh  concrete-signal-pdf.hh  expression-evaluator.cc  expression-maker.cc  expression-parser-impl.hh  expression-parser.hh  expression-parser_TEST.cc  expression-printer.cc  expression-visitors.cc  expression.hh  kinematic.cc  kinematic.hh  kinematic_TEST.cc  model.hh  observable-arithmetic.cc  observable-arithmetic.hh  observable-arithmetic_TEST.cc  options-impl.hh  options_TEST.cc  parameters.cc  standard-model.cc  standard-model.hh  transitions.hh  units.cc  units.hh  wilson_coefficients.cc  wilson_coefficients.hh  wilson_coefficients_TEST.cc  wilson_scan_model.cc  wilson_scan_model.hh
examples/: inference.ipynb  predictions.ipynb
manual/: Makefile.am  manual.tex  references.bib
manual/doc/: interface.tex  usage.tex
manual/physics/: b-baryon-hadronic-matrix-elements.tex  b-meson-hadronic-matrix-elements.tex  b-to-pi-l-nu.tex  christoph.tex  eft-b-to-s.tex  incl-b-to-s-dilepton.tex  incl-b-to-s-gamma.tex
python/: _eos.cc  setup.py.in
python/eos/: __init__.py  analysis.py  analysis_file.py  parameter.py  tasks.py
python/eos/data/: native.py
python/eos/plot/: config.py  plotter.py
src/clients/: Makefile.am
src/scripts/: Makefile.am  eos-analysis  eos-analysis_TEST  eos-automatic-analysis-and-log  eos-print-uncertainty
src/scripts/eos-analysis_TEST.d/: analysis.yaml
